+ V6 + Skyline listo para testear !

--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -99,7 +99,7 @@
                                                   <span class="card-title white-text">{{ node.extra_content.title }}</span>
                                                 </div>
                                                 <div class="card-content">
-                                                  <p>{{ node.extra_content.description }}.</p>
+                                                  <p>{{ node.extra_content.description }}</p>
                                                 </div>
                                                 <div class="card-action">
                                                   <a href="{{ node.extra_content.url }}">Ver</a>
