--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -27,7 +27,7 @@ Template para el perfil de cada usuario
 {% endblock %}
 
 {% block content %}
-    <script src="{{ STATIC_URL }}js/min/profile.min.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}js/profile.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}js/jquery.easytabs.js" type="text/javascript"></script>
     <script async src="{{ STATIC_URL }}js/jquery.hashchange.min.js" type="text/javascript"></script>
 
