--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -57,7 +57,9 @@ Base para la interfaz en comun de todos los usuarios.
                         <div class="row">
                             <div class="row">
                                 <div class="input-field col s12">
-                                    <textarea class="materialize-textarea" cols="40" data-length="500" id="message3" maxlength="500" name="content" placeholder="Escribe tu mensaje aqui..." rows="10" required=""></textarea>
+                                    <textarea class="materialize-textarea" cols="40" data-length="500" id="message3"
+                                              maxlength="500" name="content" placeholder="Escribe tu mensaje aqui..."
+                                              rows="10" required=""></textarea>
                                     <label for="message3">Escribe tu mensaje</label>
                                 </div>
                             </div>
@@ -97,11 +99,13 @@ Base para la interfaz en comun de todos los usuarios.
                         <h6>Publica un comentario para que el mundo lo vea.</h6>
                     </div>
                 </div>
-                <form id="message-form2" action="" method="post" enctype="multipart/form-data">{% csrf_token %}
+                <form id="message-form3" action="" method="post" enctype="multipart/form-data">{% csrf_token %}
                     <div class="row">
                         <div class="row">
                             <div class="input-field col s12">
-                                <textarea class="materialize-textarea" cols="40" data-length="500" id="message2" maxlength="500" name="content" placeholder="Escribe tu mensaje aqui..." rows="10" required=""></textarea>
+                                <textarea class="materialize-textarea" cols="40" data-length="500" id="message2"
+                                          maxlength="500" name="content" placeholder="Escribe tu mensaje aqui..."
+                                          rows="10" required=""></textarea>
                                 <label for="message2">Escribe tu mensaje</label>
                             </div>
                         </div>
